--- a/src/index.html
+++ b/src/index.html
@@ -26,30 +26,22 @@
 
     <main>
         <section class="section section-matrix">
-            <div class="container">
-                <!-- <div class="box-title absolute">
-                    <h2 class="title">Не важно</h2>
-                    <h2 class="title">Важно</h2>
+            <div class="pad">
+                <div class="table">
+                    <div class="box-overhead-0"></div>
+                    <div class="box-overhead"><span>Срочно</span></div>
+                    <div class="box-overhead"><span>Не срочно</span></div>
                 </div>
-                <div class="box-title">
-                    <h2 class="title">Срочно</h2>
-                    <h2 class="title">Не срочно</h2>
-                </div> -->
-    
-                <ul class="list list-matrix">
-                    <li class="item">
-                        <a class="link" href=""><p class="square-name">A</p></a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href=""><p class="square-name">B</p></a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href=""><p class="square-name">C</p></a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href=""><p class="square-name">D</p></a>
-                    </li>
-                </ul>
+                <div class="table">
+                    <div class="box-overhead-2"><span>Важно</span></div>
+                    <div class="a"></div>
+                    <div class="a"></div>
+                </div>
+                <div class="table">
+                    <div class="box-overhead-2"><span>Не важно</span></div>
+                    <div class="a"></div>
+                    <div class="a"></div>
+                </div>
             </div>
         </section>
     </main>
