--- a/src/index.html
+++ b/src/index.html
@@ -26,21 +26,21 @@
 
     <main>
         <section class="section section-matrix">
-            <div class="pad">
-                <div class="table">
-                    <div class="box-overhead-0"></div>
-                    <div class="box-overhead"><span>Срочно</span></div>
-                    <div class="box-overhead"><span>Не срочно</span></div>
+            <div class="table">
+                <div class="tr">
+                    <div class="th-null"></div>
+                    <div class="th-top"><span class="caption top">Срочно</span></div>
+                    <div class="th-top"><span class="caption top">Не срочно</span></div>
                 </div>
-                <div class="table">
-                    <div class="box-overhead-2"><span>Важно</span></div>
-                    <div class="a"></div>
-                    <div class="a"></div>
+                <div class="tr">
+                    <div class="th-left"><span class="caption left">Важно</span></div>
+                    <div class="td pink"><a class="link link-matrix" href="">Сделать</a></div>
+                    <div class="td green"><a class="link link-matrix" href="">Запланировать</a></div>
                 </div>
-                <div class="table">
-                    <div class="box-overhead-2"><span>Не важно</span></div>
-                    <div class="a"></div>
-                    <div class="a"></div>
+                <div class="tr">
+                    <div class="th-left"><span class="caption left">Не важно</span></div>
+                    <div class="td yellow"><a class="link link-matrix" href="">Делегировать</a></div>
+                    <div class="td gray"><a class="link link-matrix" href="">Удалить</a></div>
                 </div>
             </div>
         </section>
