--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,10 @@
         </div>
     </header>
 
-    <div class="menu">
-        <p>Menu</p>
+    <div class="backdrop js-backdrop">
+        <div class="menu js-menu">
+            <button class="close-btn">Close</button>
+        </div>
     </div>
 
     <main>
