Создана форма, страничка Сделать, кривой локал стор исправить

--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,13 @@
                 </div>
                 <div class="tr">
                     <div class="th-left"><span class="caption left">Важно</span></div>
-                    <div class="td pink"><a class="link link-matrix" href="">Сделать</a></div>
-                    <div class="td green"><a class="link link-matrix" href="">Запланировать</a></div>
+                    <a href="./01-make.html" class="link link-matrix"><div class="td pink"><p class="block-text">Сделать</p></div></a>
+                    <a href="" class="link link-matrix"><div class="td green"><p class="block-text">Запланировать</p></div></a>
                 </div>
                 <div class="tr">
                     <div class="th-left"><span class="caption left">Не важно</span></div>
-                    <div class="td yellow"><a class="link link-matrix" href="">Делегировать</a></div>
-                    <div class="td gray"><a class="link link-matrix" href="">Удалить</a></div>
+                    <a href="" class="link link-matrix"><div class="td yellow"><p class="block-text">Делегировать</p></div></a>
+                    <a href="" class="link link-matrix"><div class="td gray"><p class="block-text">Удалить</p></div></a>
                 </div>
             </div>
         </section>
