Сделать логику удаления li, развивать фунцкионал

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
             </div>
         </section>
     </main>
+    <!-- <button class="btn-close-make-page">Close</button> -->
 
     <script src="./index.js"></script>
 </body>
